Use class to select menu blocks

--- a/garden.html
+++ b/garden.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="content">
-        <div class="block_menu">
+        <div id="block_menu" class="block_menu">
             <section class="submenu">
                 <h3 class="select selected">About Waterbear</h3>
                 <div class="option">
